# dynamic-stack

./: CMakeLists.txt
include/: dynamic_stack.hpp
test/: CMakeLists.txt
test/src/: main.cpp
